Fix z-index issues.

--- a/sass/ppc.scss
+++ b/sass/ppc.scss
@@ -179,7 +179,7 @@ h3 {
     background: linear-gradient(-45deg, $dark 0%, $primary 50%);
     background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
-    z-index: 9999999;
+    z-index: 999999999;
 }
 
 .spinner {
